--- a/ArtMediaSite/src/app/login.component.html
+++ b/ArtMediaSite/src/app/login.component.html
@@ -1,27 +1,21 @@
-<div style="margin-top: 70px; margin-bottom: 40px;">
-    <div >
-      <div style = "width: 30rem; margin: auto">
-  
-        <h3>Login to your account</h3>
-        <form [formGroup] = "loginForm" (ngSubmit)="onSubmit()">
-          <div>
-            <label for="username">Username*</label><br>
-            <input type="text" name="username" id="username" placeholder="A name for your account"
-              class="form-control" formControlName="username"
-              [ngClass]="{ 'error' : isInvalid('username') }">
-          </div><br>
-          <div>
-            <label for="password">Password*</label><br>
-            <input type="password" name="password" id="password" placeholder="A password to protect your account"
-              class="form-control" formControlName="password"
-              [ngClass]="{ 'error' : isInvalid('password') }">
-          </div><br>
-          <span *ngIf="isIncomplete()">
-            You must complete all fields
-          </span>
-          <button *ngIf="!isIncomplete()" type="submit"
-            class="btn btn-success">Login</button>
-        </form><br>
-      </div>
-    </div>
-  </div>
+<div>
+  <h3>Login to your account</h3>
+  <form [formGroup] = "loginForm" (ngSubmit)="onSubmit()">
+    <div>
+      <label for="username">Username*</label><br>
+      <input type="text" name="username" id="username" placeholder="A name for your account"
+        class="form-control" formControlName="username"
+        [ngClass]="{ 'error' : isInvalid('username') }">
+    </div><br>
+    <div>
+      <label for="password">Password*</label><br>
+      <input type="password" name="password" id="password" placeholder="A password to protect your account"
+        class="form-control" formControlName="password"
+        [ngClass]="{ 'error' : isInvalid('password') }">
+    </div><br>
+    <span *ngIf="isIncomplete()">
+      You must complete all fields
+    </span>
+    <button *ngIf="!isIncomplete()" type="submit">Login</button>
+  </form><br>
+</div>
