--- a/ArtMediaSite/src/app/posts.component.html
+++ b/ArtMediaSite/src/app/posts.component.html
@@ -1,18 +1,29 @@
-<div class="container" style="margin-top: 70px; margin-bottom: 40px;">
-    <div class="col-sm-12" style = "width: 50rem; margin: auto">
-    <h3>Posts</h3>
+<div>
+  <h2>Art Share</h2>
+  <ng-container *ngIf = "authService.isAuthenticated(); else loggedOut">
+    Hello {{ username }}
+    <br>
+    {{ user }}
+    {{ token }}
+    <button onclick = "window.location.href='http://localhost:4200/addPost';">
+      Add New Post
+    </button><br><br>
+  </ng-container>
+  <ng-template #loggedOut>
+    Hello
+    <h5>Login to add your own posts</h5><br>
+  </ng-template>
     <div *ngFor = "let post of posts">
-        <div class="post" style = "width: 47rem; margin: auto; cursor: pointer">
+        <div class="post">
           <div style= "padding: 10px;">
-            <h5> {{ post.user }} </h5>
+            <h4> {{ post.user }} </h4>
             <p> {{ post.text }} </p>
           </div>
           <div>
             <img [src]="'http://127.0.0.1:8000/' + post.image" alt="Image"/>
           </div>
         </div>
-        <div style="margin-left: 39rem;">
+        <div>
           <br><br>
     </div>
-  </div>
 </div>
