--- a/ArtMediaSite/src/app/posts.component.html
+++ b/ArtMediaSite/src/app/posts.component.html
@@ -5,7 +5,7 @@
     <br>
     {{ user }}
     {{ token }}
-    <button onclick = "window.location.href='http://localhost:4200/addPost';">
+    <button [routerLink]="'/addPost'">
       Add New Post
     </button><br><br>
   </ng-container>
@@ -13,19 +13,24 @@
     Hello
     <h5>Login to add your own posts</h5><br>
   </ng-template>
-    <div *ngFor = "let post of posts">
-      <div class="post">
-        <div style= "padding: 10px;">
-          <h4> {{ post.user }} </h4>
-          <p> {{ post.text }} </p>
-        </div>
-        <div>
-          <img [src]="'http://127.0.0.1:8000/' + post.image" alt="Image"/>
-        </div>
+  <div *ngFor = "let post of posts">
+    <div class="post">
+      <div style= "padding: 10px;">
+        <h4> {{ post.user }} </h4>
+        <p> {{ post.text }} </p>
       </div>
       <div>
-        <br><br>
-        <button (click) = "onDelete(post.id)">Delete</button>
+        <img [src]="'http://127.0.0.1:8000/' + post.image" alt="Image"/>
+      </div>
+    </div>
+    <div>
+      <br><br>
+      <button (click) = "onDelete(post.id)">Delete</button>
+    </div>
+    <div *ngFor="let comment of post.comments">
+      <div>
+        <h4>{{ comment.user }}</h4>
+        <p>{{ comment.text }}</p>
       </div>
     </div>
 </div>
