--- a/ArtMediaSite/src/app/addPost.component.html
+++ b/ArtMediaSite/src/app/addPost.component.html
@@ -3,6 +3,11 @@
   <div class="form">
     <form [formGroup] = "postForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
+        <label for="title">Title</label><br>
+        <input type="text" name="title" id="title" placeholder="Title for the post"
+          class="form-control" formControlName="title">
+      </div>
+      <div class="form-group">
         <label for="text">Text</label><br>
         <textarea name="text" id="text"  rows="3" placeholder="Text for the post"
           class="form-control" formControlName="text">
