--- a/ArtMediaSite/src/app/posts.component.html
+++ b/ArtMediaSite/src/app/posts.component.html
@@ -16,7 +16,8 @@
   <div *ngFor = "let post of posts">
     <div class="post">
       <div style= "padding: 10px;">
-        <h4> {{ post.user }} </h4>
+        <h3> {{ post.user }} </h3>
+        <h4> {{ post.title }} </h4>
         <p> {{ post.text }} </p>
       </div>
       <div>
