--- a/ArtMediaSite/src/app/posts.component.html
+++ b/ArtMediaSite/src/app/posts.component.html
@@ -2,10 +2,8 @@
   <h2>Art Share</h2>
   <ng-container *ngIf = "authService.isAuthenticated(); else loggedOut">
     Hello {{ username }}
-    <br>
-    {{ user }}
-    {{ token }}
-    <button (click) = "onAddPost()">Add New Post</button><br><br>
+    <br><br>
+    <button class="button" (click) = "onAddPost()">Add New Post</button><br><br>
   </ng-container>
   <ng-template #loggedOut>
     Hello
@@ -21,14 +19,14 @@
       <div>
         <img [src]="'http://127.0.0.1:8000/' + post.image" alt="Image"/>
       </div>
-      <button (click) = "onEditPost(post.id)">Edit</button><button (click) = "onDeletePost(post.id)">Delete</button>
+      <button class="button" (click) = "onEditPost(post.id)">Edit</button><button class="button" (click) = "onDeletePost(post.id)">Delete</button>
       <br><br>
-      <button (click) = "onAddComment(post.id)">Add Comment</button>
+      <button class="button" (click) = "onAddComment(post.id)">Add Comment</button>
       <br>
     </div>
     <div *ngFor="let comment of post.comments">
       <h4>{{ comment.user }}</h4>
       <p>{{ comment.text }}</p>
-      <button *ngIf="comment.user === user" (click) = "onEditComment(post.id, comment.id)">Edit</button><button (click) = "onDeleteComment(comment.id)">Delete</button>
+      <button class="button" *ngIf="comment.user === user" (click) = "onEditComment(post.id, comment.id)">Edit</button><button class="button" (click) = "onDeleteComment(comment.id)">Delete</button>
     </div>
 </div>
