--- a/ArtMediaSite/src/app/post.component.html
+++ b/ArtMediaSite/src/app/post.component.html
@@ -1,13 +1,10 @@
 <div>
   <h2>Art Share</h2>
-  <ng-container *ngIf = "authService.isAuthenticated(); else loggedOut">
-    Hello {{ username }}
-    <br><br>
-    <button class="button" (click) = "onAddPost()">Add New Post</button><br><br>
+  <ng-container *ngIf = "loggedIn() == true; else loggedOut">
+    <p>Hello {{ username }}</p>
   </ng-container>
   <ng-template #loggedOut>
-    Hello
-    <h5>Login to add your own posts</h5><br>
+    <p>Login to add a comment</p>
   </ng-template>
   <div class="post">
     <div style= "padding: 10px;">
@@ -26,6 +23,8 @@
   <div *ngFor="let comment of post.comments">
     <h4>{{ comment.user }}</h4>
     <p>{{ comment.text }}</p>
-    <button class="button" *ngIf="comment.user === user" (click) = "onEditComment(post.id, comment.id)">Edit</button><button class="button" (click) = "onDeleteComment(comment.id)">Delete</button>
+    <div *ngIf="comment.user === user">
+      <button class="button" (click) = "onEditComment(post.id, comment.id)">Edit</button><button class="button" (click) = "onDeleteComment(comment.id)">Delete</button>
+    </div>
   </div>
 </div>
