--- a/ArtMediaSite/src/app/posts.component.css
+++ b/ArtMediaSite/src/app/posts.component.css
@@ -7,3 +7,42 @@
     color: #f3f0f0;
   }
 */
+.content {
+  margin: 3px;
+  margin-left: 11px;
+  padding: 5px;
+}
+
+.row {
+  margin: 0px;
+  padding: 0px;
+  align-content: center;
+}
+
+.col {
+  margin: 0px;
+  padding: 0px;
+}
+
+.card {
+  margin: 0px;
+  padding: 0px;
+  cursor: pointer;
+  width: 15rem; 
+  padding-left: 5px; 
+  padding-right: 5px;
+}
+
+.card-img-top {
+  margin: 0px;
+  padding: 0px;
+}
+
+.rounded img-fluid {
+  margin: 0px;
+  padding: 0px;
+}
+
+.card-block {
+  padding-top: 8px; padding-left: 5px; padding-right: 5px;
+}
