--- a/ArtMediaSite/src/app/posts.component.html
+++ b/ArtMediaSite/src/app/posts.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="content">
   <h2>Art Share</h2>
   <ng-container *ngIf = "loggedIn() == true; else loggedOut">
     <p>Hello {{ username }}</p>
@@ -7,26 +7,17 @@
   <ng-template #loggedOut>
     <p>Login to add your own posts</p>
   </ng-template>
-  <div *ngFor = "let post of posts">
-    <div class="post">
-      <div style= "padding: 10px;">
-        <h3> {{ post.user }} </h3>
-        <h4> {{ post.title }} </h4>
-        <p> {{ post.text }} </p>
-      </div>
-      <div>
-        <img [src]="'http://127.0.0.1:8000/' + post.image" alt="Image"/>
-      </div>
-      <button class="button" *ngIf="post.user === user" (click) = "onEditPost(post.id)">Edit</button><button class="button" *ngIf="post.user === user" (click) = "onDeletePost(post.id)">Delete</button>
-      <br><br>
-      <button class="button" *ngIf = "loggedIn() == true" (click) = "onAddComment(post.id)">Add Comment</button>
-      <br>
+  <div class="row">
+    <div class="col" *ngFor = "let post of posts">
+      <div class="card" [routerLink] = "['/posts/', post.id]">
+        <div class="card-img-top">
+          <img class="rounded img-fluid" [src]="'http://127.0.0.1:8000/' + post.image" alt="Image"/>
+        </div>
+        <div class="card-block">
+          <h5> {{ post.title }} </h5>
+          <p> {{ post.text }} </p>
+        </div>
+        <button class="btn" *ngIf="post.user === user" (click) = "onEditPost(post.id)">Edit</button><button class="btn btn-danger" *ngIf="post.user === user" (click) = "onDeletePost(post.id)">Delete</button>
     </div>
-    <div *ngFor="let comment of post.comments">
-      <h4>{{ comment.user }}</h4>
-      <p>{{ comment.text }}</p>
-      <div *ngIf="comment.user === user">
-        <button class="button" (click) = "onEditComment(post.id, comment.id)">Edit</button><button class="button" (click) = "onDeleteComment(comment.id)">Delete</button>
-      </div>
-    </div>
+  </div>
 </div>
