--- a/ArtMediaSite/src/app/nav.component.html
+++ b/ArtMediaSite/src/app/nav.component.html
@@ -19,5 +19,6 @@
     <div class="form-inline ms-auto"
       style = "padding-right: 10px">
       <button (click) = "loginLogoutButton()" class="btn btn-outline-light">{{ buttonName }}</button>
+      <button *ngIf = "!loggedIn" (click) = "register()" class="btn btn-outline-light">Signup</button>
     </div>
   </div>
