--- a/ArtMediaSite/src/app/addPost.component.html
+++ b/ArtMediaSite/src/app/addPost.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="content">
   <h2>Add a new post</h2>
   <div class="form">
     <form [formGroup] = "postForm" (ngSubmit)="onSubmit()">
@@ -23,7 +23,7 @@
         <img [src]="imagePreview" alt="Image Preview"/>
       </div><br>
       <button type="submit"
-        class="btn btn-primary">Submit</button>
+        class="btn btn-primary">Submit Post</button>
     </form>
   </div>
 </div>
