--- a/ArtMediaSite/src/app/editComment.component.html
+++ b/ArtMediaSite/src/app/editComment.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="content">
   <h2>Edit comment</h2>
   <div class="form">
     <form [formGroup] = "commentForm" (ngSubmit)="onSubmit()">
@@ -9,7 +9,7 @@
         </textarea>
       </div>
       <button type="submit"
-        class="btn btn-primary">Submit</button>
+        class="btn btn-primary">Submit Comment</button>
     </form>
   </div>
 </div>
