--- a/ArtMediaSite/src/app/editPost.component.html
+++ b/ArtMediaSite/src/app/editPost.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="content">
   <h2>Edit post</h2>
   <div class="form">
     <form [formGroup] = "postForm" (ngSubmit)="onSubmit()">
@@ -20,10 +20,10 @@
       </div>
       <div *ngIf="imagePreview">
         <p>Current Image Preview:</p>
-        <img [src]="imagePreview" alt="Current Image Preview"/>
+        <img class="rounded img-fluid" [src]="imagePreview" alt="Current Image Preview"/>
       </div><br>
       <button type="submit"
-        class="btn btn-primary">Submit</button>
+        class="btn btn-primary">Submit Post</button>
     </form>
   </div>
 </div>
