--- a/ArtMediaSite/src/app/post.component.html
+++ b/ArtMediaSite/src/app/post.component.html
@@ -1,30 +1,33 @@
-<div>
-  <h2>Art Share</h2>
-  <ng-container *ngIf = "loggedIn() == true; else loggedOut">
-    <p>Hello {{ username }}</p>
-  </ng-container>
-  <ng-template #loggedOut>
-    <p>Login to add a comment</p>
-  </ng-template>
-  <div class="post">
-    <div style= "padding: 10px;">
-      <h3> {{ post.user }} </h3>
-      <h4> {{ post.title }} </h4>
-      <p> {{ post.text }} </p>
+<div class="content">
+  <div class="row">
+    <div class="col-sm-6">
+      <a class="card bg-transparent" [href]="'http://127.0.0.1:8000/' + post.image">
+        <img class="card-img rounded img-fluid" [src]="'http://127.0.0.1:8000/' + post.image" alt="Image"/>
+      </a>
     </div>
-    <div>
-      <img [src]="'http://127.0.0.1:8000/' + post.image" alt="Image"/>
+    <div class="col-sm-6">
+      <div class="card bg-transparent">
+        <div class="card-block">
+          <h3> {{ post.user }} </h3>
+          <h4> {{ post.title }} </h4>
+          <p> {{ post.text }} </p>
+        </div>
+      </div>
     </div>
-    <button class="button" *ngIf="post.user === user" (click) = "onEditPost(post.id)">Edit</button><button class="button" *ngIf="post.user === user" (click) = "onDeletePost(post.id)">Delete</button>
+  </div>
+  <div class="row">
+    <button class="btn btn-outline-light" *ngIf="post.user === user" (click) = "onEditPost(post.id)">Edit</button><button class="btn btn-danger" *ngIf="post.user === user" (click) = "onDeletePost(post.id)">Delete</button>
     <br><br>
-    <button class="button" (click) = "onAddComment(post.id)">Add Comment</button>
+    <button class="btn btn-outline-light" (click) = "onAddComment(post.id)">Add Comment</button>
     <br>
   </div>
-  <div *ngFor="let comment of post.comments">
-    <h4>{{ comment.user }}</h4>
-    <p>{{ comment.text }}</p>
-    <div *ngIf="comment.user === user">
-      <button class="button" (click) = "onEditComment(post.id, comment.id)">Edit</button><button class="button" (click) = "onDeleteComment(comment.id)">Delete</button>
+  <div class="row">
+    <div *ngFor="let comment of post.comments">
+      <h4>{{ comment.user }}</h4>
+      <p>{{ comment.text }}</p>
+      <div *ngIf="comment.user === user">
+        <button class="btn btn-outline-light" (click) = "onEditComment(post.id, comment.id)">Edit</button><button class="btn btn-danger" (click) = "onDeleteComment(comment.id)">Delete</button>
+      </div>
     </div>
   </div>
 </div>
