--- a/ArtMediaSite/src/app/posts.component.css
+++ b/ArtMediaSite/src/app/posts.component.css
@@ -7,6 +7,12 @@
     color: #f3f0f0;
   }
 */
+
+* {
+  background-color: #262933;
+  color: #f3f0f0;
+}
+
 .content {
   margin: 3px;
   margin-left: 13.6px;
@@ -31,6 +37,7 @@
   width: 15rem; 
   padding-left: 5px; 
   padding-right: 5px;
+  border: none;
 }
 
 .card-img-top {
@@ -44,5 +51,7 @@
 }
 
 .card-block {
-  padding-top: 8px; padding-left: 5px; padding-right: 5px;
+  padding-top: 8px; 
+  padding-left: 5px; 
+  padding-right: 5px;
 }
