--- a/ArtMediaSite/src/styles.css
+++ b/ArtMediaSite/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    background-color: #262933;
+}
+
+.content {
+    background-color: #262933;
+}
+
+body {
+    background-color: #262933;
+}
