Made it so users who attempt to access edit or add pages when not logged in or not the correct user will be unable to use the form and sent back to posts page

--- a/ArtMediaSite/src/app/addComment.component.html
+++ b/ArtMediaSite/src/app/addComment.component.html
@@ -1,6 +1,9 @@
 <div class="content">
-  <h2>Add comment</h2>
-  <div class="form">
+  <ng-template #loggedOut>
+    <p>Not logged in</p>
+  </ng-template>
+  <div *ngIf = "isLoggedIn == true; else loggedOut" class="form">
+    <h2>Add comment</h2>
     <form [formGroup] = "commentForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="text">Text</label><br>
