Limited preview image size in add/edit post pages

--- a/ArtMediaSite/src/app/addPost.component.html
+++ b/ArtMediaSite/src/app/addPost.component.html
@@ -23,7 +23,7 @@
       </div>
       <div *ngIf="imagePreview">
         <p>Image Preview:</p>
-        <img [src]="imagePreview" alt="Image Preview"/>
+        <img class="img" [src]="imagePreview" alt="Image Preview"/>
       </div><br>
       <span>
         <p>Ensure all fields are filled</p>
