--- a/ArtMediaSite/src/app/editPost.component.html
+++ b/ArtMediaSite/src/app/editPost.component.html
@@ -23,7 +23,7 @@
       </div>
       <div *ngIf="imagePreview">
         <p>Current Image Preview:</p>
-        <img class="rounded img-fluid" [src]="imagePreview" alt="Current Image Preview"/>
+        <img class="img" [src]="imagePreview" alt="Current Image Preview"/>
       </div><br>
       <button type="submit"
         class="btn btn-primary">Submit Post</button>
