--- a/ArtMediaSite/src/app/posts.component.css
+++ b/ArtMediaSite/src/app/posts.component.css
@@ -22,7 +22,10 @@
 .row {
   margin: 0px;
   padding: 0px;
-  align-content: center;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+
 }
 
 .col {
@@ -43,6 +46,7 @@
 .card-img-top {
   margin: 0px;
   padding: 0px;
+  max-height: 30rem;
 }
 
 .rounded img-fluid {
