--- a/ArtMediaSite/src/app/post.component.html
+++ b/ArtMediaSite/src/app/post.component.html
@@ -25,7 +25,7 @@
     </div>
     <div class="row">
       <div *ngFor="let comment of post.comments">
-        <h3>{{comment.user}}</h3>
+        <h4>{{commentUsernames[comment.user]}}</h4>
         <p>{{comment.text}}</p>
         <div *ngIf="comment.user === user">
           <button class="btn btn-outline-light" (click) = "onEditComment(post.id, comment.id)">Edit</button><button class="btn btn-danger" (click) = "onDeleteComment(comment.id)">Delete</button>
