Can now see post usernames on posts page

--- a/ArtMediaSite/src/app/posts.component.html
+++ b/ArtMediaSite/src/app/posts.component.html
@@ -16,6 +16,7 @@
         </div>
         <div class="card-block">
           <h5> {{post.title}} </h5>
+          <h6>{{postUsernames[post.user]}}</h6>
           <p> {{post.text}} </p>
         </div>
       </div>
