--- a/ArtMediaSite/src/app/posts.component.html
+++ b/ArtMediaSite/src/app/posts.component.html
@@ -12,7 +12,7 @@
     <ng-template #loggedOut>
       <p>Login to add your own posts</p>
     </ng-template>
-    <div class="col" *ngFor = "let post of newestPosts">
+    <div class="col" *ngFor = "let post of posts">
       <div class="card bg-transparent" [routerLink] = "['/posts/', post.id]">
         <div class="card-img-top">
           <img class="rounded img-fluid" [src]="'http://127.0.0.1:8000/' + post.image" alt="Uploaded Image"/>
