--- a/ArtMediaSite/src/app/addComment.component.html
+++ b/ArtMediaSite/src/app/addComment.component.html
@@ -1,18 +1,20 @@
-<div class="content">
-  <ng-template #loggedOut>
-    <p>Not logged in</p>
-  </ng-template>
-  <div *ngIf = "isLoggedIn == true; else loggedOut" class="form">
-    <h2>Add comment</h2>
-    <form [formGroup] = "commentForm" (ngSubmit)="validateForm()">
-      <div class="form-group">
-        <label for="text">Text</label><br>
-        <textarea name="text" id="text"  rows="3" placeholder="Text for the comment"
-          class="form-control" formControlName="text">
-        </textarea>
-      </div><br>
-      <button type="submit"
-        class="btn btn-primary">Submit Comment</button>
-    </form>
+<body>
+  <div class="content">
+    <ng-template #loggedOut>
+      <p>Not logged in</p>
+    </ng-template>
+    <div *ngIf = "isLoggedIn == true; else loggedOut" class="form">
+      <h2>Add comment</h2>
+      <form [formGroup] = "commentForm" (ngSubmit)="validateForm()">
+        <div class="form-group">
+          <label for="text">Text</label><br>
+          <textarea name="text" id="text"  rows="3" placeholder="Text for the comment"
+            class="form-control" formControlName="text">
+          </textarea>
+        </div><br>
+        <button type="submit"
+          class="btn btn-primary">Submit Comment</button>
+      </form>
+    </div>
   </div>
-</div>
+</body>
