--- a/ArtMediaSite/src/app/app.component.html
+++ b/ArtMediaSite/src/app/app.component.html
@@ -1,5 +1,7 @@
-<div class="nav">
-<navigation></navigation>
-</div>
-<div><br><br><br></div>
-<router-outlet></router-outlet>
+<body>
+    <div class="nav">
+    <navigation></navigation>
+    </div>
+    <div><br><br><br></div>
+    <router-outlet></router-outlet>
+</body>
