--- a/ArtMediaSite/src/app/editUser.component.html
+++ b/ArtMediaSite/src/app/editUser.component.html
@@ -1,31 +1,33 @@
-<div class="content">
-  <ng-template #loggedOut>
-    <p>Not logged in</p>
-  </ng-template>
-  <div *ngIf = "isCorrectUser == true; else loggedOut" class="form">
-    <h2>Edit account details</h2>
-    <form [formGroup] = "userForm" (ngSubmit)="validateForm()">
-      <div class="form-group">
-        <label for="username">Username</label><br>
-        <input type="text" name="username" id="username" placeholder="Username for the user"
-          class="form-control" formControlName="username">
-      </div>
-      <div class="form-group">
-        <label for="email">Email</label><br>
-        <input type="email" name="email" id="email" placeholder="Email for the user"
-          class="form-control" formControlName="email">
-      </div>
-      <div class="form-group">
-        <label for="image">Profile Picture</label><br>
-        <input type="file" (change)="onFileSelected($event)" name="image" id="image" accept="image/png, image/jpeg"
-        class="form-control" placeholder="Profile picture for user">
-      </div>
-      <div *ngIf="imagePreview">
-        <p>Profile Picture Preview:</p>
-        <img class="img rounded-circle" [src]="imagePreview" alt="Profile Picture Preview"/>
-      </div><br>
-      <button type="submit"
-        class="btn btn-primary">Submit Account Changes</button>
-    </form>
+<body>
+  <div class="content">
+    <ng-template #loggedOut>
+      <p>Not logged in</p>
+    </ng-template>
+    <div *ngIf = "isCorrectUser == true; else loggedOut" class="form">
+      <h2>Edit account details</h2>
+      <form [formGroup] = "userForm" (ngSubmit)="validateForm()">
+        <div class="form-group">
+          <label for="username">Username</label><br>
+          <input type="text" name="username" id="username" placeholder="Username for the user"
+            class="form-control" formControlName="username">
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label><br>
+          <input type="email" name="email" id="email" placeholder="Email for the user"
+            class="form-control" formControlName="email">
+        </div>
+        <div class="form-group">
+          <label for="image">Profile Picture</label><br>
+          <input type="file" (change)="onFileSelected($event)" name="image" id="image" accept="image/png, image/jpeg"
+          class="form-control" placeholder="Profile picture for user">
+        </div>
+        <div *ngIf="imagePreview">
+          <p>Profile Picture Preview:</p>
+          <img class="img rounded-circle" [src]="imagePreview" alt="Profile Picture Preview"/>
+        </div><br>
+        <button type="submit"
+          class="btn btn-primary">Submit Account Changes</button>
+      </form>
+    </div>
   </div>
-</div>
+</body>
