--- a/ArtMediaSite/src/app/nav.component.html
+++ b/ArtMediaSite/src/app/nav.component.html
@@ -1,4 +1,5 @@
-<div class="navbar navbar-expand-sm fixed-top">
+<body>
+  <div class="navbar navbar-expand-sm fixed-top">
     <ul class="navbar-nav" style = "padding-left: 15px;">
       <li class="nav-item" style = "padding-right: 10px">
         <img routerLink="/" class="rounded mx-auto d-block" src={{logoImagePath}} alt="thumbnail image of the item" width="120" height="40" style = "margin: auto; cursor: pointer"/>
@@ -22,3 +23,4 @@
       <button class="btn" *ngIf = "loggedIn" (click) = "account()" style = "margin-left: 10px" ><img class="profilePic rounded-circle img-fluid" [src]="'http://127.0.0.1:8000/' + profileImagePath" alt="Profile Picture"/></button>
     </div>
   </div>
+</body>
