--- a/ArtMediaSite/src/app/searchPosts.component.html
+++ b/ArtMediaSite/src/app/searchPosts.component.html
@@ -1,24 +1,30 @@
-<div class="content">
-  <h2>Art Share</h2>
-  <ng-container *ngIf = "loggedIn() == true; else loggedOut">
-    <p>Hello {{ username }}</p>
-    <button class="btn btn-outline-light" (click) = "onAddPost()">Add New Post</button>
-    <br><br>
-  </ng-container>
-  <ng-template #loggedOut>
-    <p>Login to add your own posts</p>
-  </ng-template>
-  <div class="row">
-    <div class="col" *ngFor = "let post of posts">
-      <div class="card bg-transparent" [routerLink] = "['/posts/', post.id]">
-        <div class="card-img-top">
-          <img class="rounded img-fluid" [src]="'http://127.0.0.1:8000/' + post.image" alt="Image"/>
+<body>
+  <div class="content">
+    <div class="row">
+      <h2>Art Share</h2>
+      <ng-container *ngIf = "loggedIn() == true; else loggedOut">
+        <p>Hello {{username}}</p>
+        <div>
+          <button class="btn btn-outline-light" (click) = "onAddPost()">Add New Post</button><br><br>
         </div>
-        <div class="card-block">
-          <h5> {{post.title}} </h5>
-          <h6><img class="profilePic rounded-circle img-fluid" [src]="'http://127.0.0.1:8000/' + postProfilePics[post.user]" alt="Profile Picture"/> {{postUsernames[post.user]}}</h6>
+        <br><br>
+      </ng-container>
+      <ng-template #loggedOut>
+        <p>Login to add your own posts</p>
+      </ng-template>
+      <div class="row">
+        <div class="col" *ngFor = "let post of posts">
+          <div class="card bg-transparent" [routerLink] = "['/posts/', post.id]">
+            <div class="card-img-top">
+              <img class="rounded img-fluid" [src]="'http://127.0.0.1:8000/' + post.image" alt="Image"/>
+            </div>
+            <div class="card-block">
+              <h5> {{post.title}} </h5>
+              <h6><img class="profilePic rounded-circle img-fluid" [src]="'http://127.0.0.1:8000/' + postProfilePics[post.user]" alt="Profile Picture"/> {{postUsernames[post.user]}}</h6>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+</body>
