--- a/ArtMediaSite/src/app/editPost.component.html
+++ b/ArtMediaSite/src/app/editPost.component.html
@@ -19,7 +19,7 @@
         </div>
         <div class="form-group">
           <label for="image">Image or Video</label><br>
-          <input type="file" (change)="onFileSelected($event)" name="image" id="image" 
+          <input type="file" (change)="onFileSelected($event)" name="image" id="image" accept="image/png, image/gif, image/jpeg"
           class="form-control" placeholder="File for image or video">
         </div>
         <div *ngIf="imagePreview">
