--- a/ArtMediaSite/src/app/user.component.html
+++ b/ArtMediaSite/src/app/user.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-sm-6">
         <div class="card bg-transparent">
-          <div class="card-img-top">
+          <div class="card-img">
             <img class="rounded-circle img-fluid" [src]="'http://127.0.0.1:8000/' + userProfile.profile_pic" alt="Profile Picture"/><br><br>
           </div>
         </div>
@@ -18,6 +18,18 @@
           <ng-template #altView>
             <p>Joined {{userProfileDate}}</p>
           </ng-template>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col" *ngFor = "let post of posts">
+        <div class="post card bg-transparent" *ngIf = "post.user === userProfile.id" [routerLink] = "['/posts/', post.id]">
+          <div class="card-img-top">
+            <img class="rounded img-fluid" [src]="'http://127.0.0.1:8000/' + post.image" alt="Uploaded Image"/>
+          </div>
+          <div class="card-block">
+            <h5> {{post.title}} </h5>
+          </div>
         </div>
       </div>
     </div>
